--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,83 @@
-.parent {
-    border: 3px solid black;
-    min-height: 100vh;
+.main-div {
+    max-width: 1440px;
+    width: 100%;
+    margin: auto
 }
 
-.square {
+/* header  */
+
+.index-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #372D23;
+    padding: 32px 80px;
+}
+
+ul {
+    display: flex;
+    gap: 48px;
+}
+
+.header-list {
+    font-family: Inter;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 32px;
+    letter-spacing: 0%;
+}
+
+.active {
+    color: #ED6C30;
+
+}
+
+.inactive {
+    color: #FCC21B;
+}
+
+.bag {
+    font-size: 40px;
+}
+
+/* section 1 */
+
+.section1 {
+    display: flex;
     position: relative;
-    width: 500px;
-    height: 700px;
-    background-color: red;
+    /* border: 5px solid red; */
+}
+
+.section-cover {
+    width: 100%;
+    height: 100%;
+}
+
+/*article */
+.section1-article {
+    display: flex;
+    position: absolute;
+    background-color: #FCC21B;
+    width: 762px;
+    justify-content: center;
+    align-items: center;
+    padding-block: 76px;
+    top: 50%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
+    border: 3px;
+    border-radius: 10px;
+    box-shadow: 10px 10px 4px 0px #00000080 inset;
+
+}
+
+.article-h2 {
+    font-family: Inter;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 56px;
+    letter-spacing: 0%;
+    color: #FFFFFF;
+    filter: drop-shadow(6px 2px 4px #372D23);
+
 }
