--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,10 @@
     letter-spacing: 0%;
 }
 
+.page-lists:hover {
+    transform: translateY(-10px);
+}
+
 .active {
     color: #ED6C30;
 
@@ -38,6 +42,10 @@
 
 .bag {
     font-size: 40px;
+}
+
+.bag:hover {
+    transform: translateY(-10px);
 }
 
 /* section 1 */
@@ -126,6 +134,41 @@
 .index-footer {
     background-color: #372D23;
     display: flex;
+    padding: 32px 80px;
+    justify-content: space-between;
+    /* align-items: center; */
+}
+
+.footer-ul {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.footer-page-links:hover {
+    transform: translateX(20px)
+}
+
+.footer-links {
+    font-family: Inter;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0%;
+    text-align: center;
+    color: #FCC21B;
 
 }
 
+.social-links-ul {
+    display: flex;
+    gap: 24px;
+}
+
+.social-links-li:hover {
+    transform: translateY(-10px)
+}
+
+.icon {
+    font-size: 32px;
+}
