--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,17 @@
     padding: 32px 80px;
 }
 
+.site-logo-link {
+    display: flex;
+    width: 72px;
+    height: 72px;
+}
+
+.site-logo {
+    width: 100%;
+    height: 100%;
+}
+
 .header-ul {
     display: flex;
     gap: 48px;
